// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot 1`] = `
<div
  className="Card "
>
  <div
    className="inner"
  />
</div>
`;

exports[`Should match snapshot with children nodes 1`] = `
<div
  className="Card "
>
  <div
    className="inner"
  >
    <p>
      Testing
    </p>
  </div>
</div>
`;
